--- a/css/styles.css
+++ b/css/styles.css
@@ -1,13 +1,44 @@
 body {
 	font-family: 'Roboto', sans-serif;
-    color: #2E2F42;
+    color: #434455;
     background-color: #FFF;
 }
 
-.link-logo {
-    font-family: 'Raleway', sans-serif;
+a {text-decoration: none;}
+
+li {list-style-type: none;}
+
+span {
+color: #4D5AE5;
+font-family: Raleway;
+font-size: 18px;
+font-weight: 700;
+line-height: 1.167; /* 116.667% */
+letter-spacing: 0.03em;
+text-transform: uppercase;
 }
 
-a {
-    text-decoration: none;
+.nav-logo {
+color: #2E2F42;
+font-family: Raleway;
+font-size: 18px;
+font-weight: 700;
+line-height: 1.167; /* 116.667% */
+letter-spacing: 0.03em;
+text-transform: uppercase;
+}
+
+.nav-item-link {
+color: #2E2F42;
+font-size: 16px;
+font-weight: 500;
+line-height: 1.5; /* 150% */
+letter-spacing: 0.02em;
+}
+
+.address-item-link{
+color: #434455;
+font-size: 16px;
+line-height: 1.5; /* 150% */
+letter-spacing: 0.02em;
 }
