--- a/css/styles.css
+++ b/css/styles.css
@@ -9,22 +9,22 @@ a {text-decoration: none;}
 li {list-style-type: none;}
 
 /* header */
-span {
-color: #4D5AE5;
-font-family: Raleway;
+.nav-logo-storage {
+color: #2e2f42;
+font-family: "Raleway", sans-serif;
 font-size: 18px;
 font-weight: 700;
-line-height: 1.167;
+line-height: 1.17;
 letter-spacing: 0.03em;
 text-transform: uppercase;
 }
 
 .nav-logo {
-color: #2E2F42;
-font-family: Raleway;
+color: #4D5AE5;
+font-family: "Raleway", sans-serif;
 font-size: 18px;
 font-weight: 700;
-line-height: 1.167;
+line-height: 1.17;
 letter-spacing: 0.03em;
 text-transform: uppercase;
 }
@@ -37,11 +37,16 @@ line-height: 1.5;
 letter-spacing: 0.02em;
 }
 
-.nav-item-link .link:active {
+.nav-item-link .link:hover
+.nav-item-link .link:focus{
 color: #404BBF;
 font-size: 16px;
 line-height: 1.5;
 letter-spacing: 0.02em;
+}
+
+.address{
+font-style: normal
 }
 
 .address-item-link{
@@ -60,40 +65,35 @@ letter-spacing: 0.02em;
 }
 
 /* Section1 */
-.section1{
+.section_one{
 background-color: #2E2F42;  
 }
 
-.section1-title {
+.section_one-title {
 color: #FFF;
 text-align: center;
 font-size: 56px;
 font-weight: 700;
-line-height: 1.071;
+line-height: 1.07;
 letter-spacing: 0.02em;
 }
 
-.section1-btn{
-cursor: pointer;
-border-radius: 4px;
-background:#4D5AE5;
-box-shadow: rgba(0, 0, 0, 0.15);
-}
-
-.section1-btn:hover,
-.section1-btn:focus {
-border-radius: 4px;
-background: #404BBF;
-box-shadow: rgba(0, 0, 0, 0.15);
-}
-
-.section1-btn-text{
+.section_one-btn{
 color: #FFF;
 font-size: 16px;
 font-weight: 500;
 line-height: 1.5;
 letter-spacing: 0.04em;
-text-transform: capitalize
+text-transform: capitalize;
+cursor: pointer;
+background:#4D5AE5;
+box-shadow: rgba(0, 0, 0, 0.15);
+}
+
+.section_one-btn:hover,
+.section_one-btn:focus {
+background: #404BBF;
+box-shadow: rgba(0, 0, 0, 0.15);
 }
 
 /* Section2 */
@@ -111,7 +111,7 @@ clip: rect(0 0 0 0);
 overflow: hidden;
 }
 
-.section2-menu-title{
+.section_two-menu-title{
 color: #2E2F42;
 font-size: 20px;
 font-weight: 500;
@@ -119,7 +119,7 @@ line-height: 1.2;
 letter-spacing: 0.02em;
 }
 
-.section2-menu-text{
+.section_two-menu-text{
 color:#434455;
 font-size: 16px;
 line-height: 1.5;
@@ -128,11 +128,11 @@ letter-spacing: 0.02em;
 
 /* Section3 */
 
-.section3{
+.section_three{
 background-color: #F4F4FD; 
 }
 
-.section3-title{
+.section_three-title{
 color: #2E2F42;
 text-align: center;
 font-size: 36px;
@@ -142,12 +142,11 @@ letter-spacing: 0.02em;
 text-transform: capitalize;
 }
 
-.section3-menu-foto{
-background: url(<path-to-image>), 
-lightgray -97.034px -0.927px / 181.897% 251.37% no-repeat;
+.section_three-menu-item{
+background-color: #FFFFFF
 }
 
-.section3-menu-title{
+.section_three-menu-title{
 color: #2E2F42;
 text-align: center;
 font-size: 20px;
@@ -156,7 +155,7 @@ line-height: 1.2;
 letter-spacing: 0.02em;
 }
 
-.section3-menu-text{
+.section_three-menu-text{
 color:#434455;
 text-align: center;
 font-size: 16px;
@@ -166,7 +165,7 @@ letter-spacing: 0.02em;
 
 /* Section4 */
 
-.section4-title{
+.section_four-title{
 color: #2E2F42;
 text-align: center;
 font-size: 36px;
@@ -176,12 +175,7 @@ letter-spacing: 0.02em;
 text-transform: capitalize;
 }
 
-.section4-menu-foto{
-background: url(<path-to-image>),
- lightgray -25.026px 0px / 125% 100% no-repeat;
-}
-
-.section4-menu-title{
+.section_four-menu-title{
 color: #2E2F42;
 font-size: 20px;
 font-weight: 500;
@@ -189,7 +183,7 @@ line-height: 1.2;
 letter-spacing: 0.02em;
 }
 
-.section4-menu-text{
+.section_four-menu-text{
 color:#434455;
 font-size: 16px;
 line-height: 1.5;
@@ -202,22 +196,22 @@ letter-spacing: 0.02em;
 background-color: #2E2F42;
 }
 
-span {
-color: #4D5AE5;
-font-family: Raleway;
+.footer-logo-storage {
+color:#F4F4FD;
+font-family: "Raleway", sans-serif;
 font-size: 18px;
 font-weight: 700;
-line-height: 1.167;
+line-height: 1.17;
 letter-spacing: 0.03em;
 text-transform: uppercase;
 }
     
 .footer-logo {
-color:#F4F4FD;
-font-family: Raleway;
+color: #4D5AE5;
+font-family: "Raleway", sans-serif;
 font-size: 18px;
 font-weight: 700;
-line-height: 1.16; /* 116.667% */
+line-height: 1.17;
 letter-spacing: 0.03em;
 text-transform: uppercase;
 }
